--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "private": true,
   "dependencies": {
     "@types/clipboard": "^1.5.34",
+    "@types/jest": "^21.1.2",
     "@types/material-ui": "^0.18.2",
+    "@types/node": "^8.0.46",
+    "@types/react": "^16.0.10",
+    "@types/react-dom": "^16.0.1",
     "@types/react-monaco-editor": "^0.8.2",
     "@types/react-router-dom": "^4.0.8",
     "clipboard": "^1.7.1",
@@ -21,11 +25,5 @@
     "build": "react-scripts-ts build",
     "test": "react-scripts-ts test --env=jsdom",
     "eject": "react-scripts-ts eject"
-  },
-  "devDependencies": {
-    "@types/jest": "^21.1.2",
-    "@types/node": "^8.0.46",
-    "@types/react": "^16.0.10",
-    "@types/react-dom": "^16.0.1"
   }
 }
