--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "talk-about-code",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "private": true,
   "dependencies": {
     "@types/clipboard": "^1.5.34",
+    "@types/history": "^4.6.1",
     "@types/jest": "^21.1.2",
     "@types/material-ui": "^0.18.2",
     "@types/node": "^8.0.46",
