--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "talk-about-code",
-  "version": "1.0.1",
+  "version": "1.1.1",
   "private": true,
   "dependencies": {
     "@types/clipboard": "^1.5.34",
@@ -10,14 +10,14 @@
     "@types/node": "^8.0.46",
     "@types/react": "^16.0.10",
     "@types/react-dom": "^16.0.1",
-    "@types/react-monaco-editor": "^0.8.2",
+    "@types/react-monaco-editor": "0.10.0",
     "clipboard": "^1.7.1",
     "faye": "^1.2.4",
     "history": "^4.7.2",
     "material-ui": "^0.19.4",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
-    "react-monaco-editor": "^0.10.1",
+    "react-monaco-editor": "0.13.0",
     "react-scripts-ts": "2.7.0"
   },
   "scripts": {
