--- a/package.json
+++ b/package.json
@@ -1,24 +1,25 @@
 {
   "name": "talk-about-code",
-  "version": "1.1.1",
+  "version": "1.2.0",
   "private": true,
   "dependencies": {
     "@types/clipboard": "^1.5.34",
     "@types/history": "^4.6.1",
-    "@types/jest": "^21.1.2",
-    "@types/material-ui": "^0.18.2",
-    "@types/node": "^8.0.46",
+    "@types/jest": "^22.1.1",
+    "@types/material-ui": "^0.20.5",
+    "@types/node": "^9.4.0",
     "@types/react": "^16.0.10",
     "@types/react-dom": "^16.0.1",
     "@types/react-monaco-editor": "0.10.0",
     "clipboard": "^1.7.1",
     "faye": "^1.2.4",
     "history": "^4.7.2",
-    "material-ui": "^0.19.4",
+    "material-ui": "^0.20.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
-    "react-monaco-editor": "0.13.0",
-    "react-scripts-ts": "2.7.0"
+    "react-monaco-editor": "^0.13.0",
+    "react-scripts-ts": "^2.13.0",
+    "typescript": "^2.7.1"
   },
   "scripts": {
     "start": "react-scripts-ts start",
