--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.3.3",
   "private": true,
   "dependencies": {
+    "@sentry/browser": "^4.0.0-beta.11",
     "@types/clipboard": "^1.5.34",
     "@types/history": "^4.6.1",
     "@types/jest": "^22.1.1",
